Geometry Node Causing Blender Crash #96152

Closed
opened 2022-03-03 16:06:03 +01:00 by Surendra Kumar · 8 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-03 12:29, hash: ffaaa0bcbf
Worked: (newest version of Blender that worked as expected)

Short description of error
Hi All, for last 2 days, geometry node in my nightly build blender is crashing a lot mostly when I try to create noodles from a node socket. It's basically unusable.
Attaching the file I am working on. Thanks!

Exact steps for others to reproduce the error
Drop a "Realize Instance" node in the node tree at the end as in screenshot.Clipboard - March 3.png
lightening.blend

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 511.65 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-03-03 12:29, hash: `ffaaa0bcbf` Worked: (newest version of Blender that worked as expected) **Short description of error** Hi All, for last 2 days, geometry node in my nightly build blender is crashing a lot mostly when I try to create noodles from a node socket. It's basically unusable. Attaching the file I am working on. Thanks! **Exact steps for others to reproduce the error** Drop a "Realize Instance" node in the node tree at the end as in screenshot.![Clipboard - March 3.png](https://archive.blender.org/developer/F12895728/Clipboard_-_March_3.png) [lightening.blend](https://archive.blender.org/developer/F12895720/lightening.blend)
Author

Added subscriber: @SurendraKumar

Added subscriber: @SurendraKumar

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for the report. I can confirm.

In a Debug build we reach this assert:

BLI_assert failed: D:\Dev\BlenderDev\blender\source\blender\blenkernel\intern\curve_eval.cc:430, curves_to_curve_eval(), at '0'
  This line of code is marked to be unreachable.
Thanks for the report. I can confirm. In a Debug build we reach this assert: ``` BLI_assert failed: D:\Dev\BlenderDev\blender\source\blender\blenkernel\intern\curve_eval.cc:430, curves_to_curve_eval(), at '0' This line of code is marked to be unreachable. ```
Hans Goudey self-assigned this 2022-03-03 23:23:07 +01:00
Member

It looks like the realize instances node is taking the curve_type attribute and moving it from the curve to the point domain. I'm not quite sure why yet; the code is quite complicated.

I think it will be easier to port the node to the new Curves data-block honestly, rather than fixing this bug and then porting it later.

It looks like the realize instances node is taking the `curve_type` attribute and moving it from the curve to the point domain. I'm not quite sure why yet; the code is quite complicated. I think it will be easier to port the node to the new `Curves` data-block honestly, rather than fixing this bug and then porting it later.
Member

Actually I was quite wrong. This is the system working as intended, but curve_type isn't marked as a builtin attribute. The fix is simple.

Actually I was quite wrong. This is the system working as intended, but `curve_type` isn't marked as a builtin attribute. The fix is simple.

This issue was referenced by 887ccb8537

This issue was referenced by 887ccb853711d89a67d77fa1037cd977298780b3
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96152
No description provided.